@@ -1,6 +1,7 @@
 3.0915:
  - Fix: Reduce the wild resource fluctuations during planet ticking.
  - Mod: Evein plans get an extra 5 days start time for building.
+ - Add: Lacuna promotions.
 
 3.0914:
  - UI : Evein draining re-added.
